--- a/src/App.css
+++ b/src/App.css
@@ -5,38 +5,23 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
 }
 
-.card {
-  padding: 2em;
+.container {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(40em, 1fr));
+  gap: 2em;
 }
 
-.read-the-docs {
-  color: #888;
+.container > .section {
+  width: 100%;
+  background-color: #fff;
+}
+
+.section:not(.live-preview-section) {
+  border-radius: 1rem;
 }
